<?xml version="1.0"?>
<package format="2">
  <name>sick_visionary</name>
  <version>0.2.2</version>
  <description>Open source driver for the SICK Visionary 3D camera.</description>

  <license>Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0)</license>

  <!--<url type="website">http://wiki.ros.org/sick_visionary_t_driver</url>-->

  <maintainer email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</maintainer>
  <maintainer email="marco.dierschke@sick.de">Marco Dierschke</maintainer>
  <maintainer email="andreas.richert@sick.de">Andreas Richert</maintainer>
  <author email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>sensor_msgs</depend>

</package>
